:sparkles: login page

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,2 +1,5 @@
-<%- include('../partials/chatform.ejs') %>
-<%- include('../partials/socket.ejs') %>
+
+<h1><%= pagemsg %></h1>   
+<%- include('../partials/head.ejs') %>
+<%- include('../partials/login.ejs') %>
+<%- include('../partials/pageend.ejs') %>
