--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -1,4 +1,5 @@
-<h1><%= pagemsg %></h1>   
+<h1><%= pagemsg %></h1> 
+<h2>Hello <span class="user-name"><%= user %></span></h2>  
 <%- include('../partials/head.ejs') %>
 <%- include('../partials/chatform.ejs') %>
 <script defer src="/js/socket.js"></script>
