--- a/views/partials/chatform.ejs
+++ b/views/partials/chatform.ejs
@@ -1,4 +1,11 @@
+<aside id="member-list">
+  <h3>Fighters online</h3>
+  <ul></ul>
+  <div id="mana-pool"></div>
+</aside>
 <ul id="messages"></ul>
 <form action="">
+  <div class="message-box">
     <input id="m" autocomplete="off" /><button>Send</button>
-  </form>
+  </div>
+</form>
