--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -1,5 +1,12 @@
 
-<form action="/chat" method="get">
+<form action="/chat" method="POST">
     <label for="fname">Enter your first name:</label>
     <input type="text" name="fname" id="fname">
+    <h3>Select your fighter</h3>
+    <label for="vegeta"><img src="/img/vegeta.png" alt="vegeta"></label>
+    <input required type="radio" name="warrior" value="vegeta" id="vegeta">
+    <label for="gohan"><img src="/img/gohan.png" alt="gohan"></label>
+    <input required type="radio" name="warrior" value="gohan" id="gohan">
+    <label for="goku"><img src="/img/goku.png" alt="goku"></label>
+    <input required type="radio" name="warrior" value="goku" id="goku">
 </form>
