--- a/static/css/main.less
+++ b/static/css/main.less
@@ -38,16 +38,18 @@ aside {
   }
 }
 #messages {
-    border-radius: 4px;
+  border-radius: 4px;
   max-width: 680px;
+  height: 75%;
   margin: auto;
   background-color: rgba(127, 255, 212, 0.658);
   display: flex;
   flex-direction: column;
-  padding: 1.5rem;
+  padding: 1.5rem 40px;
   list-style: none;
-
+  overflow-y: scroll;
   li {
+    position: relative;
     margin-top: 0.2rem;
     p {
       padding: 0.2rem;
@@ -103,7 +105,13 @@ label img {
   height: 90px;
 }
 .thumb {
+  position: absolute;
   border-radius: 50%;
   height: 40px;
   width: 40px;
+  top: 20px;
+}
+.other .thumb{
+  left: -40px;
+  
 }
