--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,8 +3,11 @@ body {
   background-size: cover;
   font-family: Arial, Helvetica, sans-serif;
 }
+h1 {
+  margin-bottom: 1.2rem;
+}
 aside {
-  max-width: 400px;
+  max-width: 100%;
   background-color: rgba(255, 255, 255, 0.644);
 }
 aside h3 {
@@ -19,7 +22,7 @@ aside li {
   justify-content: space-between;
 }
 aside li progress {
-  margin-left: 2rem;
+  margin: auto;
   -webkit-appearance: none;
 }
 aside li progress[value]::-webkit-progress-bar {
@@ -37,9 +40,9 @@ aside li progress[value]::-webkit-progress-value {
 #messages {
   border-radius: 4px;
   max-width: 680px;
-  height: 75%;
+  height: 65%;
   margin: auto;
-  background-color: rgba(127, 255, 212, 0.658);
+  background-color: rgba(255, 255, 255, 0.658);
   display: flex;
   flex-direction: column;
   padding: 1.5rem 40px;
@@ -84,14 +87,21 @@ form {
 }
 .message-box {
   position: fixed;
+  left: 0;
   bottom: 20px;
-  max-width: 680px;
+  padding: 0 8px;
+  width: 100%;
+  display: flex;
 }
 .message-box #m {
-  width: 600px;
+  font-size: 1.2rem;
+  color: blue;
+  height: 2rem;
+  width: 90%;
 }
 button {
-  margin-left: auto;
+  color: blue;
+  margin-right: 16px;
 }
 label img {
   object-fit: cover;
