--- a/views/partials/chatform.ejs
+++ b/views/partials/chatform.ejs
@@ -1,7 +1,7 @@
 <aside id="member-list">
   <h3>Fighters online</h3>
   <ul></ul>
-  <div id="mana-pool"></div>
+  <div id="mana-pool" class=""></div>
 </aside>
 <ul id="messages"></ul>
 <form action="">
