--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,41 +1,55 @@
 body {
-  background-image: url('../img/background.jpg');
-  background-size: cover;
   font-family: Arial, Helvetica, sans-serif;
 }
+.body-background {
+  left: 0;
+  top: 0;
+  background-image: url('../img/background.jpg');
+  background-size: cover;
+  opacity: 0.65;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
 h1 {
-  margin-bottom: 1.2rem;
+  margin-bottom: 0.2rem;
 }
 aside {
   max-width: 100%;
   background-color: rgba(255, 255, 255, 0.644);
+  padding: 0.5rem;
+  margin-bottom: 0.6rem;
 }
 aside h3 {
-  margin-left: 2rem;
+  margin: auto;
 }
 aside ul {
   padding: 0;
 }
-aside li {
-  text-align: right;
-  list-style: none;
-  justify-content: space-between;
+aside div {
+  display: flex;
 }
-aside li progress {
-  margin: auto;
+aside progress {
   -webkit-appearance: none;
 }
-aside li progress[value]::-webkit-progress-bar {
+aside progress[value]::-webkit-progress-bar {
   background-color: #eee;
   border-radius: 2px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
 }
-aside li progress[value]::-webkit-progress-value {
+aside progress[value]::-webkit-progress-value {
   background-image: -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, 0.1) 33%, rgba(0, 0, 0, 0.1) 66%, transparent 66%), -webkit-linear-gradient(top, rgba(239, 255, 97, 0.38), rgba(0, 0, 0, 0.25)), -webkit-linear-gradient(left, #00b2f1, #01cd82);
   background-position: 0 0;
   border-radius: 2px;
   background-size: 35px 20px, 100% 100%, 100% 100%;
   transition: all 2s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+aside li {
+  width: 50%;
+  text-align: right;
+  list-style: none;
+  justify-content: space-between;
 }
 #messages {
   border-radius: 4px;
@@ -84,6 +98,50 @@ aside li progress[value]::-webkit-progress-value {
 form {
   max-width: 680px;
   margin: auto;
+}
+.mana-pool {
+  display: block;
+  width: 1%;
+  height: 1.2rem;
+  background-color: blue;
+  transition: all 1s ease-in-out;
+}
+.mp-10 {
+  width: 10%;
+}
+.mp-20 {
+  width: 20%;
+}
+.mp-30 {
+  width: 30%;
+}
+.mp-40 {
+  width: 40%;
+}
+.mp-50 {
+  width: 50%;
+}
+.mp-60 {
+  width: 60%;
+}
+.mp-70 {
+  width: 70%;
+}
+.mp-80 {
+  width: 80%;
+}
+.mp-90 {
+  width: 90%;
+}
+.mp-100 {
+  width: 100%;
+}
+.mana-pool:after {
+  content: 'MP';
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 1rem;
 }
 .message-box {
   position: fixed;
