--- a/static/css/main.less
+++ b/static/css/main.less
@@ -1,26 +1,35 @@
-body {
+body{
+  font-family: Arial, Helvetica, sans-serif;
+}
+.body-background {
+    left: 0;
+    top: 0;
     background-image: url('../img/background.jpg');
     background-size: cover;
-    font-family: Arial, Helvetica, sans-serif;
+    opacity: .65;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;  
 }
 h1{
-  margin-bottom: 1.2rem;
+  margin-bottom: .2rem;
 }
 aside {
   max-width: 100%;
   background-color: rgba(255, 255, 255, 0.644);
+  padding:.5rem;
+  margin-bottom: .6rem;
   h3{
-      margin-left: 2rem;
+    margin: auto;
   }
   ul {
     padding: 0;
   }
-  li {
-    text-align: right;
-    list-style: none;
-    justify-content: space-between;
-    progress {
-      margin: auto;
+  div{
+    display: flex;
+  }
+  progress {
       -webkit-appearance: none;
     }
     progress[value]::-webkit-progress-bar {
@@ -38,6 +47,12 @@ aside {
       background-size: 35px 20px, 100% 100%, 100% 100%;
       transition: all 2s cubic-bezier(0.785, 0.135, 0.15, 0.86);
     }
+  li {
+    width: 50%;
+    text-align: right;
+    list-style: none;
+    justify-content: space-between;
+    
   }
 }
 #messages {
@@ -51,6 +66,7 @@ aside {
   padding: 1.5rem 40px;
   list-style: none;
   overflow-y: scroll;
+  
   li {
     position: relative;
     margin-top: 0.2rem;
@@ -58,7 +74,7 @@ aside {
       padding: 0.2rem;
       border-radius: 4px;
     }
-
+    
     span {
       font-size: 0.7rem;
       color: rgb(126, 126, 126);
@@ -90,6 +106,50 @@ aside {
 form {
   max-width: 680px;
   margin: auto;
+}
+.mana-pool{
+  display: block;
+  width: 1%;
+  height: 1.2rem;
+  background-color: blue;
+  transition: all 1s ease-in-out;
+}
+.mp-10{
+  width: 10%;
+}
+.mp-20{
+  width: 20%;
+}
+.mp-30{
+  width: 30%;
+}
+.mp-40{
+  width: 40%;
+}
+.mp-50{
+  width: 50%;
+}
+.mp-60{
+  width: 60%;
+}
+.mp-70{
+  width: 70%;
+}
+.mp-80{
+  width: 80%;
+}
+.mp-90{
+  width: 90%;
+}
+.mp-100{
+  width: 100%;
+}
+.mana-pool:after{
+  content: 'MP';
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  font-size: 1rem;
 }
 .message-box {
   position: fixed;
