--- a/instagraff/views/pages/home.ejs
+++ b/instagraff/views/pages/home.ejs
@@ -6,10 +6,15 @@
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
     <script defer src="js/map.js"></script>
-    <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
     <div id='map'></div>
+
+    <form id="upload" enctype="multipart/form-data" action="/upload" method="post">
+    <input type="file" name="userImage" id="">
+    <button type="submit">Upload</button>
+    </form>
 </body>
 </html>
