real time adding markers to map while uploading images to Flickr

--- a/instagraff/views/pages/home.ejs
+++ b/instagraff/views/pages/home.ejs
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
-    <script defer src="js/map.js"></script>
-    <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
-</head>
+    <%- include('../partials/head.ejs') %>
 <body>
     <div id='map'></div>
 
-    <form id="upload" enctype="multipart/form-data" action="/upload" method="post">
-    <input type="file" name="userImage" id="">
-    <button type="submit">Upload</button>
-    </form>
+    <%- include('../partials/upload-graffs.ejs') %>   
 </body>
 </html>
