--- a/instagraff/static/css/index.css
+++ b/instagraff/static/css/index.css
@@ -1,1 +1,1 @@
-#map{position:absolute;top:0;bottom:0;width:100%;height:600px}#upload{position:absolute;bottom:2rem}#upload button{border-radius:50%}
+#map{position:absolute;top:0;left:0;bottom:0;width:100%;height:600px}.marker{background-image:url(/ui/icons/graffiti.png);background-size:cover;width:50px;height:50px;border-radius:50%;cursor:pointer}.mapboxgl-popup{max-width:200px}.mapboxgl-popup-content{text-align:center;font-family:'Open Sans',sans-serif}#upload{position:absolute;bottom:2rem}
