--- a/instagraff/views/pages/login.ejs
+++ b/instagraff/views/pages/login.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <% include('../partials/head') %>
+    <%- include('../partials/upload-graffs.ejs') %>
 <body>
     <main class="login_form">
     <form action="/login" method="post">
