--- a/instagraff/views/pages/home.ejs
+++ b/instagraff/views/pages/home.ejs
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head.ejs') %>
-<body>
-    <div id='map'></div>
-
-    <%- include('../partials/upload-graffs.ejs') %>   
-</body>
+  <%- include('../partials/head.ejs') %>
+  <body>
+    <div>
+      <% if(message){ %>
+      <h2><%= message %></h2>
+      <% } %>
+    </div>
+    <div id="map"></div>
+    <script>let dataJSON =<%-JSON.stringify(results)%> </script>
+    <%- include('../partials/upload-graffs.ejs') %>
+  </body>
 </html>
