--- a/instagraff/views/partials/upload-graffs.ejs
+++ b/instagraff/views/partials/upload-graffs.ejs
@@ -1,4 +1,4 @@
-<form id="upload" enctype="multipart/form-data" action="/upload" method="post">
+<form id="upload" enctype='application/x-www-form-urlencoded' action="/upload" method="post">
     <label for="artist">Artist name:
         <input name="artist" type="text" id="artist">
     </label>
@@ -24,6 +24,10 @@
         </label>
     </fieldset>
     
-    <input required type="file" name="userImage" id="">
+    <input type="file" id="fileElem" name="file" multiple accept="image/*" style="display:none">
+<a href="#" id="fileSelect">Select some files</a> 
+<div id="fileList">
+  <p>No files selected!</p>
+</div>
     <button type="submit">Upload</button>
 </form>
