--- a/instagraff/views/pages/login.ejs
+++ b/instagraff/views/pages/login.ejs
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('../partials/head.ejs') %>
-<body>
-    <main class="login_form">
+
+    <main class="form_login">
     <form action="/login" method="post">
         <fieldset>
             <legend>Inloggen </legend>
-            <div class="form_field">       
+            <div class="form_field">    
+                <label for="email">E-mailadres</label>   
                 <input type="email" name="username" id="email" required>
-                <label for="email">E-mailadres</label>
             </div>
             <div class="form_field">
-                <input id="password" name="password" type="password" required>
                 <label for="password">Wachtwoord</label>
+                <input id="password" name="password" type="password" required>
             </div>
         
-            <button class="form__button" type="submit">Login</button>
-            <a href="">Wachtwoord vergeten?</a>
-            <a href="/register">Register</a>
+            <button class="form_button" type="submit">Login</button>
+            
+            <div class="form_field">
+                <a href="">Wachtwoord vergeten?</a>
+                <a href="/register">Register</a>
+            </div>
         </fieldset>
     </form>
 </main>
-</body>
-</html>
+<%- include('../partials/footer.ejs') %>
