--- a/instagraff/views/partials/head.ejs
+++ b/instagraff/views/partials/head.ejs
@@ -11,3 +11,5 @@
     <link rel="stylesheet" href="css/index.css">
     <title>Instagraff</title>
 </head>
+<body>
+    <div class="background_img"></div>
