--- a/instagraff/views/partials/upload-graffs.ejs
+++ b/instagraff/views/partials/upload-graffs.ejs
@@ -1,3 +1,4 @@
+<section class="form_upload">
 <form id="upload" enctype='application/x-www-form-urlencoded' action="/upload" method="post">
     <label for="artist">Artist name:
         <input name="artist" type="text" id="artist">
@@ -31,3 +32,4 @@
 </div>
     <button type="submit">Upload</button>
 </form>
+</section>
