--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -23,4 +23,4 @@
       </fieldset>
       <button class="form__button" type="submit">Registreer</button>
     </form>
-
+    <%- include('../partials/footer.ejs') %>
