:lipstick: styling interface and added graffiti listing

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('../partials/head.ejs') %>
-
+    <div class="background_img"></div>
     <main class="form_login">
     <form action="/login" method="post">
         <fieldset>
