--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,7 @@
 <header>
+    
     <nav>
+        <a href="/"><img src="/logo/instagraff_bold.png" alt="Instagraff logo link to home"></a>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/login">Login</a></li>
