--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,14 +2,26 @@
 <html lang="en">
   <%- include('../partials/head.ejs') %>
 
-    <div>
-      <% if(message){ %>
-      <h2><%= message %></h2>
-      <% } %>
+  <div>
+    <% if(message){ %>
+    <h2><%= message %></h2>
+    <% } %>
+  </div>
+  <section>
+    <div class="map_container">
+      <div class="sidebar ">
+        <div class="heading">
+          <h1>All graffitis</h1>
+        </div>
+        <div id="listings" class="listings"></div>
+      </div>
+
+      <div id="map" class="map"></div>
     </div>
-    <div id="map"></div>
-    <script>
+  </section>
+  <script>
     let dataJSON = <%-JSON.stringify(results )%>
-    </script>
-    <%- include('../partials/upload-graffs.ejs') %>
-    <%- include('../partials/footer.ejs') %>
+  </script>
+  <%- include('../partials/upload-graffs.ejs') %> <%-
+  include('../partials/footer.ejs') %>
+</html>
