--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -22,6 +22,6 @@
   <script>
     let dataJSON = <%-JSON.stringify(results )%>
   </script>
-  <%- include('../partials/upload-graffs.ejs') %> <%-
-  include('../partials/footer.ejs') %>
+  <%- include('../partials/upload-graffs.ejs') %> 
+  <%- include('../partials/footer.ejs') %>
 </html>
