--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,21 +7,7 @@
     <h2><%= message %></h2>
     <% } %>
   </div>
-  <section>
-    <div class="map_container">
-      <div class="sidebar ">
-        <div class="heading">
-          <h1>All graffitis</h1>
-        </div>
-        <div id="listings" class="listings"></div>
-      </div>
-
-      <div id="map" class="map"></div>
-    </div>
-  </section>
-  <script>
-    let dataJSON = <%-JSON.stringify(results )%>
-  </script>
+  <%- include('../partials/map.ejs') %>
   <%- include('../partials/upload-graffs.ejs') %> 
   <%- include('../partials/footer.ejs') %>
 </html>
