flow of uploading images is done

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,8 @@
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
     <script defer src="js/map.js"></script>
-    <script defer src="js/xhttp.js"></script>
+    <script defer src="js/fileselector.js"></script>
+    <script defer src="js/upload.js"></script>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="js/socket.js"></script>
     
