:sparkles: liking feature almost done

--- a/views/partials/map.ejs
+++ b/views/partials/map.ejs
@@ -1,4 +1,4 @@
-<section>
+<main>
   <div class="map_container">
     <div class="sidebar">
       <div class="heading">
@@ -9,7 +9,7 @@
 
     <div id="map" class="map"></div>
   </div>
-</section>
+</main>
 <script>
-  let dataJSON = <%-JSON.stringify(results )%>
+  let dataJSON = <%-JSON.stringify(results)%>
 </script>
