--- a/views/partials/upload-graffs.ejs
+++ b/views/partials/upload-graffs.ejs
@@ -1,40 +1,59 @@
 <section class="form_upload">
-    <label for="show-form"></label>
-    <input type="checkbox" name="" id="show-form">
-<form id="upload" enctype='application/x-www-form-urlencoded' action="/upload" method="post">
-    <label for="artist">Artist name:
-        <input name="artist" type="text" id="artist">
-    </label>
+  <label for="show-form"></label>
+  <input type="checkbox" name="" id="show-form" />
+  <form
+    id="upload"
+    enctype="application/x-www-form-urlencoded"
+    action="/upload"
+    method="post"
+  >
+    <fieldset>
+      <label for="artist"
+        >Artist name:
+        <input name="artist" type="text" id="artist" />
+      </label>
+    </fieldset>
     <fieldset required>
-        <legend>What type of graffiti?</legend>
-        <label for="tag">Tag
-            <input type="checkbox" name="style" id="tag" value="tag">
-        </label>
-        <label for="piece">Piece
-            <input type="checkbox" name="style" id="piece" value="piece">
-        </label>
-        <label for="throw">Throw-up
-            <input type="checkbox" name="style" id="throw" value="throw">
-        </label>
+      <legend>What type of graffiti?</legend>
+      <label for="tag">
+        <input type="checkbox" name="style" id="tag" value="tag" />
+        Tag
+      </label>
+      <label for="piece">
+        <input type="checkbox" name="style" id="piece" value="piece" />
+        Piece
+      </label>
+      <label for="throw">
+        <input type="checkbox" name="style" id="throw" value="throw" />
+        Throw-up
+      </label>
+    </fieldset>
+    <fieldset aria-required="true">
+      <legend>Where did you spot this graff?</legend>
+      <a href="#" id="drop-marker">Drop a marker to point the location</a>
+      <label for="lat"
+        >Latitude
+        <input type="text" name="lat" id="lat" />
+      </label>
+      <label for="lon"
+        >Longtitude
+        <input type="text" name="lon" id="lon" />
+      </label>
     </fieldset>
     <fieldset>
-        <legend>Where did you spot this graff?</legend>
-        
-        <label for="lat">Latitude
-            <input type="text" name="lat" id="lat">
-        </label>
-        <label for="lon">Longtitude
-            <input type="text" name="lon" id="lon">
-        </label>
-        <p>Or use a marker to define the position!</p>
-        <a href="#" id="drop-marker">Use marker</a>
+      <input
+        type="file"
+        id="fileElem"
+        name="file"
+        multiple
+        accept="image/*"
+        style="display: none;"
+      />
+      <a href="#" id="fileSelect">Select some files</a>
+      <div id="fileList">
+        <p>No files selected!</p>
+      </div>
     </fieldset>
-    
-    <input type="file" id="fileElem" name="file" multiple accept="image/*" style="display:none">
-<a href="#" id="fileSelect">Select some files</a> 
-<div id="fileList">
-  <p>No files selected!</p>
-</div>
     <button type="submit">Upload</button>
-</form>
+  </form>
 </section>
