:construction liking and disliking

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icon/favicon.ico" type="image/x-icon">
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css' rel='stylesheet' />
     <script defer src="js/map.js"></script>
@@ -8,7 +9,7 @@
     <script defer src="js/upload.js"></script>
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="js/socket.js"></script>
-    
+    <script defer src="js/interface.js"></script>
     <link rel="stylesheet" href="css/index.css">
     <title>Instagraff</title>
 </head>
