:lipstick: header and listings styling

--- a/views/partials/map.ejs
+++ b/views/partials/map.ejs
@@ -1,6 +1,9 @@
 <main>
   <div class="map_container">
-    <div class="sidebar">
+    
+    <input type="checkbox" name="show-sidebar" id="sidebar-check">
+
+    <div class="sidebar">      
       <div class="heading">
         <h1>All graffitis</h1>
       </div>
