:lipstick: working on styling for mobile

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,12 +2,9 @@
 <html lang="en">
   <%- include('../partials/head.ejs') %>
 
-  <div>
-    <% if(message){ %>
-    <h2><%= message %></h2>
-    <% } %>
-  </div>
+  
   <%- include('../partials/map.ejs') %>
   <%- include('../partials/upload-graffs.ejs') %> 
   <%- include('../partials/footer.ejs') %>
+  <%- include('../partials/message.ejs') %>
 </html>
