--- a/static/tempCss/form.less
+++ b/static/tempCss/form.less
@@ -7,14 +7,80 @@ form{
     width: var(--container-width);
 }
 .form_upload{
+
   #show-form{
     position: absolute;
+    left: -999px;
   }
+  
   display: flex;
   flex-wrap: wrap;
 }
+.form_upload > label{
+  background-color: var(--grey-dark);
+  background-image: url('/ui/icons/camera.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 2rem;
+  display: block;
+  position: absolute;
+  bottom: 3rem;
+  right: 1rem;
+  width: 3rem;
+  height: 3rem; 
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+#upload{
+  background-color: var(--grey-dark);
+  color: #fff;
+  position: absolute;
+  bottom: 2rem;
+  right: 0;
+  opacity: 0;
+  height: 0;
+  width: 0;
+  transition: all 1.4s ease-in-out;
+  overflow: scroll;
+  a{
+    color: #fff;
+  }
+  a:visited{
+    color: #fff;
+  }
+  button{
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    background-color: var(--grey-dark);
+    &:hover{
+      background-color: var(--grey-light);
+    }
+  }
+  fieldset{
+    transition: all 1.4s ease-in-out;
+    width: 80%;
+    label{
+      display:flex;
+      justify-content: space-between;
+    }
+  }
+  fieldset:focus-within{
+    height: auto;
+    opacity: 1;
+  }
+  fieldset:valid + fieldset{
+    opacity: 1;
+    height: auto;
+  }
+}
+#show-form:checked + #upload{
+ opacity: 1;
+ width: 100%;
+ height: 50vh;
+ z-index: 2;
+}
 .form_login {
-
   legend{
     font-size: 2rem;
     font-weight: bold;
@@ -31,8 +97,8 @@ form{
 fieldset {
   border: none;
   display: flex;
-
 }
+
 .form_field {
     display: flex;
     flex-direction: column;
