--- a/static/tempCss/main.css
+++ b/static/tempCss/main.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Poppins Regular'), local('Poppins-Regular'), url(https://fonts.gstatic.com/s/poppins/v9/pxiEyp8kv8JHgFVrJJfedw.ttf) format('truetype');
+}
 :root {
   --container-width: 975px;
   --feed-width: 614px;
@@ -6,9 +13,12 @@
   --blue-dark: #005BEA;
   --blue-light: #00C6FB;
 }
+:root * {
+  font-family: -apple-system, 'Poppins', 'Helvetica Neue', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif !important;
+}
 .background_img {
   background-color: rgba(105, 105, 105, 0.65);
-  background-image: url("../img/kbtr.jpg");
+  background-image: url("../img/kbtr.bw.jpg");
   position: absolute;
   top: 0;
   right: 0;
@@ -20,22 +30,13 @@ body {
   background-color: var(--grey-light);
   display: flex;
   flex-direction: column;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  justify-content: center;
   margin: 0;
 }
 header {
-  background-color: var(--grey-dark);
   display: block;
   height: 54px;
   width: 100%;
-  border-bottom: 1px solid #dadada;
-}
-header nav {
-  background-image: url("/img/kindpng_90791.png");
-  background-size: 250px 100px;
-  background-position: left center;
-  background-repeat: no-repeat;
+  z-index: 1;
 }
 header a {
   color: #fff;
@@ -49,7 +50,7 @@ header a img {
 }
 header nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   margin: auto;
   width: var(--container-width);
@@ -58,9 +59,14 @@ header nav ul {
   list-style-type: none;
   display: flex;
   flex-direction: wrap;
+  justify-content: space-around;
+  padding: 0;
 }
 header nav ul li {
-  width: 5rem;
+  padding: 0.5rem;
+  margin: 0 0.2rem;
+  background-color: var(--grey-light);
+  border-radius: 4px;
 }
 main {
   margin-top: 2rem;
