--- a/static/tempCss/main.less
+++ b/static/tempCss/main.less
@@ -1,17 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 :root {
   --container-width: 975px;
   --feed-width: 614px;
-
+  
   // Colors
   --grey-dark: rgb(36, 36, 36);
   --grey-light: rgb(53, 53, 53);
   --blue-dark: #005BEA;
   --blue-light: #00C6FB;
 }
+:root *{
+  font-family: -apple-system, 'Poppins', 'Helvetica Neue', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',  sans-serif !important;
+}
 
 .background_img{
   background-color: rgba(105, 105, 105, 0.65);
-  background-image: url("../img/kbtr.jpg");
+  background-image: url("../img/kbtr.bw.jpg");
     position: absolute;
     top:0;
     right: 0;
@@ -23,22 +27,15 @@ body {
   background-color: var(--grey-light);
   display: flex;
   flex-direction: column;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  justify-content: center;
   margin:0;
 }
 header{
-  background-color: var(--grey-dark);
+  // background-color: var(--grey-dark);
   display: block;
   height:  54px;
   width: 100%;
-  border-bottom: 1px solid rgb(218, 218, 218);
-  nav{
-      background-image: url("/img/kindpng_90791.png");
-      background-size: 250px 100px;
-      background-position: left center;
-      background-repeat: no-repeat;
-  }
+  
+  z-index: 1;
   a{
     color: #fff;
     text-decoration: none;
@@ -51,7 +48,7 @@ header{
   }
   nav{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: auto;
     width: var(--container-width);
@@ -59,9 +56,13 @@ header{
       list-style-type: none;
       display: flex;
       flex-direction: wrap;
+      justify-content: space-around;
+      padding: 0;
       li{
-        width: 5rem;
-        
+        padding: .5rem;
+        margin: 0 .2rem;
+        background-color: var(--grey-light);
+        border-radius: 4px;
         }
       }
     }
