--- a/static/tempCss/map.less
+++ b/static/tempCss/map.less
@@ -1,107 +1,138 @@
 .map_container{
   display: flex;
-  width: var(--container-width);
+  width: 100vw;
   margin: auto ;
-  height: 600px;
-  position: relative;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
   overflow: hidden;
 }
 
 .sidebar {
-  width: 33.3333%;
+  position: relative;
+  width: 100%;
+  height: 100vh;
   overflow: hidden;
   border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
 .map {
-  border-left: 1px solid #fff;
   height: 100%;
-  width: 66.6666%;
+  width: 100%;
 
 }
-#sidebar-check{
-  opacity: 0;
-  transform: translateX(-10rem);
-}
-@media only screen and (max-width: 975px) {
-  #sidebar-check{
-    opacity: 1;
-    z-index: 1;
+// #sidebar-check{
+//   opacity: 0;
+//   transform: translateX(-10rem);
+// }
+// @media only screen and (max-width: 975px) {
+//   #sidebar-check{
+//     opacity: 1;
+//     z-index: 1;
     
-  }
-  .sidebar{
-    transform: translateX(-1.3rem);
-    transition: width 1.2s ease-out;
-    overflow: auto;
-    width: 0%;
-    z-index: 1;
-  }
-  #sidebar-check::before{
-    transition: all  1.15s  ease-out;
-    content:"Show list";
-    opacity: 1;
-    color: #fff;
-    border: 1px solid var(--grey-light);
-    border-radius: 4px;
-    transform: rotate(90deg) translateX(3.2rem) translateY(-6rem);
-    display: block;
-    width: 8rem;
-    background-color: var(--grey-dark) ;
-    padding: .5rem;
+//   }
+//   .sidebar{
+//     transform: translateX(-1.3rem);
+//     transition: width 1.2s ease-out;
+//     overflow: auto;
+//     width: 0%;
+//     z-index: 1;
+//   }
+//   #sidebar-check::before{
+//     transition: all  1.15s  ease-out;
+//     content:"Show list";
+//     opacity: 1;
+//     color: #fff;
+//     border: 1px solid var(--grey-light);
+//     border-radius: 4px;
+//     transform: rotate(90deg) translateX(3.2rem) translateY(-6rem);
+//     display: block;
+//     width: 8rem;
+//     background-color: var(--grey-dark) ;
+//     padding: .5rem;
     
-    position: absolute;
-    // left: -.9rem;
-    // top: .9rem;
-    z-index: 1;
-  }
+//     position: absolute;
+//     // left: -.9rem;
+//     // top: .9rem;
+//     z-index: 1;
+//   }
 
-  #sidebar-check:checked::before{
-    content: "Hide list";
-    // left: 177px;
-    // top: .9rem;
-    transform:rotate(90deg) translateY(-17.2rem) translateX(3.2rem);
-    z-index: 1;
-  }
-  #sidebar-check:checked ~ .sidebar{
-    transition: width 1.2s ease-out;
-    transform: translateX(-11%);
-    width: 177px;
-    z-index: 1;
-  }
+//   #sidebar-check:checked::before{
+//     content: "Hide list";
+//     // left: 177px;
+//     // top: .9rem;
+//     transform:rotate(90deg) translateY(-17.2rem) translateX(3.2rem);
+//     z-index: 1;
+//   }
+//   #sidebar-check:checked ~ .sidebar{
+//     transition: width 1.2s ease-out;
+//     transform: translateX(-11%);
+//     width: 177px;
+//     z-index: 1;
+//   }
 
-  .map{
-    left: 0;
-    width: 100%;
-    position: absolute;
+//   .map{
+//     left: 0;
+//     width: 100%;
+//     position: absolute;
  
-  }
-}
+//   }
+// }
 * {
- 
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+canvas{
+  width: 100%;
+  height: 100%;
+}
+.mapboxgl-control-container{
+  display: none;
+}
+.list_container{
+  position: absolute;
+  width: 100%;
+  top: calc(100% - 2rem);
+  z-index: 1;
+  height: 100vh;
+  transition: transform 1.4s ease-in-out ;
+  scroll-snap-points-y: repeat(400px)
+}
+.move-list-up{
+  transform: translateY(calc(-100% + 2rem));
+}
+.thumbList{
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+}
 .heading {
+  position: sticky;
+  margin: auto;
   background-color: var(--grey-dark);
   border-bottom: 1px solid #eee;
-  height: 60px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  width: 100%;
   line-height: 60px;
   padding: 0 10px;
   // animation: moveBackground ease infinite 5s alternate-reverse;
   h1{
     color: #fff;
     font-size: 22px;
-    margin: 0;
+    margin: auto;
+    text-align: center;
     font-weight: 400;
     line-height: 20px;
-    padding: 20px 2px;
+    padding: .5rem;
   }
 }
 
 .listings {
   background-color: #fff;
   height: 100%;
-  overflow: auto;
+  // overflow: auto;
   padding-bottom: 60px;
   p{
     margin: 0;
@@ -110,14 +141,27 @@
     text-decoration: none;
   }
 }
-
-.listings .item {
+.text_container{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.listings{
   display: block;
+  overflow-y: scroll;
+}
+.listings .item {
   border-bottom: 1px solid #eee;
   padding: 10px;
   text-decoration: none;
 }
-
+.item{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .listings .item:last-child { border-bottom: none; }
 
 .listings .item .title {
@@ -137,7 +181,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 3px;
   height: 3px;
   border-left: 0;
   background: rgba(0, 0, 0, 0.1);
