--- a/views/partials/map.ejs
+++ b/views/partials/map.ejs
@@ -1,16 +1,15 @@
 <main>
   <div class="map_container">
-    
-    <input type="checkbox" name="show-sidebar" id="sidebar-check">
-
-    <div class="sidebar">      
-      <div class="heading">
-        <h1>All graffitis</h1>
-      </div>
-      <div id="listings" class="listings"></div>
-    </div>
-
     <div id="map" class="map"></div>
   </div>
 </main>
 
+<aside class="list_container">
+  <div class="sidebar">      
+    <div class="heading">
+      <h1>All graffitis</h1>
+    </div>
+    <div id="listings" class="listings">
+    </div>
+  </div>
+</aside>
