--- a/views/partials/upload-graffs.ejs
+++ b/views/partials/upload-graffs.ejs
@@ -1,59 +1,47 @@
 <section class="form_upload">
   <label for="show-form"></label>
   <input type="checkbox" name="" id="show-form" />
-  <form
-    id="upload"
-    enctype="application/x-www-form-urlencoded"
-    action="/upload"
-    method="post"
-  >
-    <fieldset>
-      <label for="artist"
-        >Artist name:
-        <input name="artist" type="text" id="artist" />
+  <form id="upload" enctype="application/x-www-form-urlencoded" action="/upload" method="post">
+    <fieldset aria-required="true">
+      <label for="artist">Artist name:
+        <input required name="artist" type="text" id="artist" />
       </label>
     </fieldset>
-    <fieldset required>
+    <fieldset aria-required="true">
       <legend>What type of graffiti?</legend>
-      <label for="tag">
-        <input type="checkbox" name="style" id="tag" value="tag" />
+      <label for="tag"> 
         Tag
+        <input type="checkbox" name="style" id="tag" value="tag" />
       </label>
       <label for="piece">
-        <input type="checkbox" name="style" id="piece" value="piece" />
         Piece
+        <input type="checkbox" name="style" id="piece" value="piece" /> 
       </label>
       <label for="throw">
-        <input type="checkbox" name="style" id="throw" value="throw" />
         Throw-up
+        <input type="checkbox" name="style" id="throw" value="throw" />
       </label>
     </fieldset>
     <fieldset aria-required="true">
       <legend>Where did you spot this graff?</legend>
       <a href="#" id="drop-marker">Drop a marker to point the location</a>
-      <label for="lat"
-        >Latitude
-        <input type="text" name="lat" id="lat" />
+      <label for="lat">Latitude
+        <input required type="text" name="lat" id="lat" />
       </label>
-      <label for="lon"
-        >Longtitude
-        <input type="text" name="lon" id="lon" />
+      <label for="lon">Longtitude
+        <input required type="text" name="lon" id="lon" />
       </label>
     </fieldset>
     <fieldset>
-      <input
-        type="file"
-        id="fileElem"
-        name="file"
-        multiple
-        accept="image/*"
-        style="display: none;"
-      />
+      <input required type="file" id="fileElem" name="file" multiple accept="image/*" style="display: none;" />
       <a href="#" id="fileSelect">Select some files</a>
       <div id="fileList">
         <p>No files selected!</p>
       </div>
     </fieldset>
-    <button type="submit">Upload</button>
+    <fieldset>
+      <button type="submit">Upload</button>
+    </fieldset>
+    
   </form>
 </section>
