personal feed logic done

--- a/views/partials/map.ejs
+++ b/views/partials/map.ejs
@@ -9,7 +9,15 @@
     <div class="heading">
       <h1>All graffitis</h1>
     </div>
-    <div id="listings" class="listings">
+    <div id="listings" class="container x proximity-scroll-snapping listings">
+     
+    </div>
+    <div id="feed">
+      <div class="heading">
+        <h1>Following artists</h1>
+      </div>
+      <p class="personal-feed">Login to see your personal feed here</p>
+      
     </div>
   </div>
 </aside>
