fixed bug with images

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <%- include('../partials/head.ejs') %>
 
-  
+  <h3><%= message %></h3>
   <%- include('../partials/map.ejs') %> 
   
   <%- include('../partials/upload-graffs.ejs') %>
