--- a/views/partials/upload-graffs.ejs
+++ b/views/partials/upload-graffs.ejs
@@ -6,6 +6,7 @@
     <% if(user) { %>
     <div class="container x proximity-scroll-snapping">
       <fieldset>
+        <legend>Show your picture!</legend>
         <input required type="file" id="fileElem" name="file" multiple accept="image/*" style="display: none;" />
         <a href="#" id="fileSelect">Select some files</a>
         <div id="fileList">
@@ -13,6 +14,7 @@
         </div>
       </fieldset>
       <fieldset aria-required="true">
+        <legend>Name the artist!</legend>
         <label for="artist">Artist name: </label>
         <input required name="artist" type="text" id="artist" />
       </fieldset>
@@ -42,6 +44,7 @@
         </label>
       </fieldset>
       <fieldset>
+        <legend>Bomb the map!</legend>
         <button type="submit">Upload</button>
       </fieldset>
     </div>
