Logout route & readme updated wishlistl

--- a/views/partials/upload-graffs.ejs
+++ b/views/partials/upload-graffs.ejs
@@ -22,15 +22,15 @@
         <legend>What type of graffiti?</legend>
         <label for="tag">
           Tag
-          <input type="checkbox" name="style" id="tag" value="tag" />
+          <input required type="radio" name="style" id="tag" value="tag" />
         </label>
         <label for="piece">
           Piece
-          <input type="checkbox" name="style" id="piece" value="piece" />
+          <input required type="radio" name="style" id="piece" value="piece" />
         </label>
         <label for="throw">
           Throw-up
-          <input type="checkbox" name="style" id="throw" value="throw" />
+          <input required type="radio" name="style" id="throw" value="throw" />
         </label>
       </fieldset>
       <fieldset aria-required="true">
