--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,13 @@
         <a href="/"><img src="/logo/instagraff_bold.png" alt="Instagraff logo link to home"></a>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Register</a></li>
+            <% if (user){ %>
+                <li><a href="/logout">Logout</a></li>
+            <% } else {%>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
+            <% } %>
+            
         </ul>
     </nav>
 </header>
