working remote CSS

--- a/static/cssTemp/main.less
+++ b/static/cssTemp/main.less
@@ -17,6 +17,8 @@
   background-color: rgba(105, 105, 105, 0.65);
   background-image: url("../img/kbtr.bw.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
     position: absolute;
     top:0;
     right: 0;
