--- a/static/cssTemp/form.css
+++ b/static/cssTemp/form.css
@@ -14,14 +14,16 @@ form {
   width: 100%;
   height: 12rem;
   flex-flow: row nowrap;
+  align-items: center;
 }
 .x.proximity-scroll-snapping {
   scroll-snap-type: x proximity;
 }
 .container > fieldset {
-  text-align: center;
+  text-align: left;
   scroll-snap-align: center;
   flex: none;
+  border-right: 1px solid var(--grey-light);
 }
 .x.container > fieldset {
   width: 100%;
@@ -44,13 +46,18 @@ form {
   display: block;
   position: absolute;
   bottom: 3rem;
-  right: 1rem;
+  right: 1.5rem;
   width: 3rem;
   height: 3rem;
   border: 1px solid #fff;
   border-radius: 50%;
   transition: transform ease 1.4s;
   z-index: 3;
+}
+.form_upload > label:hover,
+.form_upload > label:active {
+  transform: scale(1.5);
+  background-color: var(--grey-light);
 }
 #upload {
   display: flex;
@@ -69,6 +76,18 @@ form {
   transition: all 1.4s ease-in-out;
   overflow-x: scroll;
 }
+#upload .container.x {
+  height: 100%;
+}
+#upload .login-message {
+  text-align: center;
+  margin: auto;
+  margin-top: 5rem;
+  padding: 0.5rem;
+}
+#upload .login-sub {
+  margin-bottom: 3rem;
+}
 #upload #artist {
   width: 100%;
   height: auto;
@@ -80,6 +99,8 @@ form {
   color: #fff;
 }
 #upload button {
+  padding: 1.5rem;
+  font-size: 1.5rem;
   color: #fff;
   border: 1px solid #fff;
   border-radius: 4px;
@@ -92,16 +113,11 @@ form {
   transition: all 1.4s ease-in-out;
   width: 100%;
   max-width: 16rem;
-  height: 8rem;
+  height: 100%;
   scroll-snap-type: x proximity;
 }
-#upload fieldset:focus-within {
-  height: auto;
-  opacity: 1;
-}
-#upload fieldset:valid + fieldset {
-  opacity: 1;
-  height: auto;
+#upload fieldset:valid {
+  background-color: var(--grey-light);
 }
 #show-form:checked ~ label {
   z-index: 3;
