--- a/static/cssTemp/form.less
+++ b/static/cssTemp/form.less
@@ -14,14 +14,16 @@ form{
   width: 100%;
   height: 12rem;
   flex-flow: row nowrap;
+  align-items: center;
 }
 .x.proximity-scroll-snapping {
   scroll-snap-type: x proximity;
 }
 .container > fieldset {
-  text-align: center;
+  text-align: left;
   scroll-snap-align: center;
   flex: none;
+  border-right: 1px solid var(--grey-light);
 }
 
 .x.container > fieldset {
@@ -48,13 +50,17 @@ form{
   display: block;
   position: absolute;
   bottom: 3rem;
-  right: 1rem;
+  right: 1.5rem;
   width: 3rem;
   height: 3rem; 
   border: 1px solid #fff;
   border-radius: 50%;
   transition: transform ease 1.4s;
   z-index: 3;
+  &:hover, &:active{
+    transform: scale(1.5);
+    background-color: var(--grey-light);
+  }
 }
 #upload{
   display: flex;
@@ -72,6 +78,18 @@ form{
   width: 0;
   transition: all 1.4s ease-in-out;
   overflow-x: scroll;
+  .container.x{
+    height: 100%;
+  }
+  .login-message{
+    text-align: center;
+    margin: auto;
+    margin-top: 5rem;
+    padding:.5rem;
+  }
+  .login-sub{
+    margin-bottom: 3rem;
+  }
   #artist{
     width: 100%;
     height: auto;
@@ -83,6 +101,8 @@ form{
     color: #fff;
   }
   button{
+    padding: 1.5rem;
+    font-size: 1.5rem;
     color: #fff;
     border: 1px solid #fff;
     border-radius: 4px;
@@ -95,20 +115,11 @@ form{
     transition: all 1.4s ease-in-out;
     width: 100%;
     max-width: 16rem;
-    height: 8rem;
+    height: 100%;
     scroll-snap-type: x proximity;
-    // label{
-    //   display:flex;
-    //   justify-content: space-evenly;
-    // }
-  }
-  fieldset:focus-within{
-    height: auto;
-    opacity: 1;
-  }
-  fieldset:valid + fieldset{
-    opacity: 1;
-    height: auto;
+    &:valid{
+      background-color: var(--grey-light);
+    }
   }
 }
 #show-form:checked ~ label{
