--- a/static/cssTemp/map.css
+++ b/static/cssTemp/map.css
@@ -23,8 +23,6 @@
   width: 100%;
 }
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 canvas {
@@ -44,14 +42,15 @@ canvas {
   scroll-snap-points-y: repeat(400px);
 }
 .move-list-up {
-  transform: translateY(-20rem);
+  transform: translateY(-30rem);
 }
 .thumbList {
-  width: 5rem;
+  width: 100%;
   height: 5rem;
   object-fit: cover;
 }
 .heading {
+  position: -webkit-sticky;
   position: sticky;
   margin: auto;
   background-color: var(--grey-dark);
@@ -82,29 +81,29 @@ canvas {
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 100%;
-  width: 6rem;
+  width: 100%;
 }
 img {
   align-self: flex-end;
 }
+#listings {
+  flex-direction: row-reverse;
+}
 .listings {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
   background-color: #fff;
   height: 100%;
   overflow: auto;
 }
 .listings .item {
-  max-width: 600px;
+  min-width: 12rem;
   padding: 10px;
   text-decoration: none;
 }
 .item {
-  width: 34rem;
   display: flex;
-  flex-direction: row;
+  flex-direction: column-reverse;
   justify-content: space-between;
   border-right: 1px solid var(--blue-light);
 }
