changed firstname to nickname and removed lastname

--- a/views/partials/register.ejs
+++ b/views/partials/register.ejs
@@ -6,11 +6,8 @@
     >
       <h1>Sign up</h1>
       <fieldset>
-        <label for="firstName">Voornaam</label>
-        <input type="text" name="firstName" class="" required />
-
-        <label for="lastName" class="label field2">Achternaam</label>
-        <input type="text" name="lastName" class="" required />
+        <label for="nickName">Nickname</label>
+        <input type="text" name="nickName" class="" required />
 
         <label for="email" class="label field3">E-mailadres</label>
         <input type="email" name="email" id="email" required />
