--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head.ejs') %>
-    <div class="background_img"></div>
-    <main class="form_login">
+  <%- include('../partials/head.ejs') %>
+  <div class="background_img"></div>
+  <main class="form_login">
     <form action="/login" method="post">
-        <fieldset>
-            <legend>Inloggen </legend>
-            <div class="form_field">    
-                <label for="email">E-mailadres</label>   
-                <input type="email" name="username" id="email" required>
-            </div>
-            <div class="form_field">
-                <label for="password">Wachtwoord</label>
-                <input id="password" name="password" type="password" required>
-            </div>
-        
-            <button class="form_button" type="submit">Login</button>
-            
-            <div class="form_field">
-                <a href="">Wachtwoord vergeten?</a>
-                <a href="/register">Register</a>
-            </div>
-        </fieldset>
+      <fieldset>
+        <legend>Inloggen</legend>
+        <div class="form_field">
+          <label for="email">E-mailadres</label>
+          <input type="email" name="username" id="email" required />
+        </div>
+        <div class="form_field">
+          <label for="password">Wachtwoord</label>
+          <input id="password" name="password" type="password" required />
+        </div>
+      </fieldset>
+      <button class="form_button" type="submit">Login</button>
+
+      <div class="form_field">
+        <p>
+          <a href="">Forgot password?</a>
+          <a href="/register">Register</a>
+        </p>
+      </div>
     </form>
-</main>
-<%- include('../partials/footer.ejs') %>
+  </main>
+  <%- include('../partials/footer.ejs') %>
+</html>
